# scpi_instrument

./: Cargo.toml  README.md  link.x
.cargo/: config
src/: main.rs  scpi_def.rs  scpi_parser.rs  uart_server.rs
