[package]
name = "scpi_instrument"
version = "0.1.0"
authors = ["Dakota Kitzman <dakota.kitzman@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
fe_rtos = { git = "https://github.com/badrobotics/FeRTOS/" }
fe_osi = { git = "https://github.com/badrobotics/FeRTOS/" }
stm32f407g-disc = "0.4.1"
embedded-hal = { features = ["unproven"], version = "0.2.6" }
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.3"

[dependencies.scpi]
version = "0.4.1"
default-features = false
features = ["libm"]


# this lets you use `cargo fix`!
[[bin]]
name = "scpi_instrument"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations